--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,6 @@
 (library
- (preprocess (pps ppx_deriving.std))
- (libraries nice_parser)
+ (preprocess (pa_ocaml pps ppx_deriving.std))
+ (libraries nice_parser earley)
  (name ocaml_lite))
 
 (ocamllex lexer)
